fix: align the content in the header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,21 @@
 .fl-header{
+  width: 91%;
   display: flex;
+  margin: 0 auto;
   justify-content: center;
+ 
+  @media (max-width: 600px) {
+    justify-content: space-between;
+  }
 }
 .fl-header-image{
   margin: auto;
+  padding-left: 9rem;
+
+  @media (max-width: 600px) {
+    padding-left: 0;
+    margin: 0;
+  }
 }
 .fl-language{
   margin-left: auto;
