--- a/src/app/fl-language/fl-language.component.scss
+++ b/src/app/fl-language/fl-language.component.scss
@@ -1,5 +1,4 @@
 .dropdown{
-    padding-left: 20rem;
     display:flex;
     flex-direction: column;
     row-gap: 0.5rem;
